--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-# Visual Studio 2015 user specific files
+[Bb]in/
+[Oo]bj/
+[Ww]orking*/
+Build/Temp/
+Doc/doc.shfbproj_*
+TestResults/
+AppPackages/
+BenchmarkDotNet.Artifacts/
+*.suo
+*.user
+*.userprefs
+_ReSharper.*
+*.ReSharper.user
+*.resharper.user
 .vs/
+.vscode/
+*.lock.json
+*.nuget.props
+*.nuget.targets
+*.orig
+.DS_Store
