Ajuste publicação nuget.org

--- a/ElogroupProjetos/Elogroup.String/Elogroup.String.csproj
+++ b/ElogroupProjetos/Elogroup.String/Elogroup.String.csproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>nuget pack "$(ProjectDir)Elogroup.String.Activities.nuspec" -OutputDirectory  $(ProjectDir)bin\Release</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
