--- a/ElogroupProjetos/Elogroup.Utils/Elogroup.Utils.csproj
+++ b/ElogroupProjetos/Elogroup.Utils/Elogroup.Utils.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>nuget pack "$(ProjectDir)Elogroup.Utils.Activities.nuspec" -OutputDirectory  $(ProjectDir)bin\Release</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
