--- a/ElogroupProjetos/Elogroup.String.Tests/Elogroup.String.UnitTests.csproj
+++ b/ElogroupProjetos/Elogroup.String.Tests/Elogroup.String.UnitTests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tests\CompareStrings.cs" />
     <Compile Include="Tests\GetTextBetweenKeywordsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\RemoveSpecialCharactersTests.cs" />
